echorest-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echorest-ingress
  namespace: echorest-namespace
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: echorest-ingress
spec:
  rules:
    - http:
        paths:
          - path: /echo
            backend:
              serviceName: echorest-service
              servicePort: 8080
          - path: /echo/all
            backend:
              serviceName: echorest-service
              servicePort: 8080
